<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.company.app.formulas.matematica.area_q">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="11">

        <EditText
            android:id="@+id/num1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:gravity="center_vertical|center"
            android:hint="@string/area"
            android:inputType="numberSigned|numberDecimal"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/eq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="="
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/num2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:gravity="center_vertical|center"
            android:hint="@string/base"
            android:inputType="numberSigned|numberDecimal"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/vezes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="*"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/num3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:gravity="center_vertical|center"
            android:hint="@string/altura"
            android:inputType="numberSigned|numberDecimal"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/LinearBotao"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5" />

        <Button
            android:id="@+id/calcular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@color/AppThemeBlue"
            android:text="@string/Calc"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
